# mcp-gitlab

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  README.md  gemini-extension.json  llms-full.txt  llms.txt  pyproject.toml  server.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  release.yml  tests.yml
evaluations/: eval.xml
src/mcp_gitlab/: __init__.py  __main__.py  client.py  config.py  exceptions.py
src/mcp_gitlab/models/: approvals.py  base.py  ci.py  common.py  issues.py  merge_requests.py  pipelines.py  projects.py  repositories.py
src/mcp_gitlab/resources/: approval-workflow.md  code-review.md  codeowners.md  conventional-commits.md  git-workflow.md  gitlab-ci.md  mr-hygiene.md
src/mcp_gitlab/resources/prompts/: approve-mr.md  diagnose-pipeline.md  prepare-release.md  review-mr.md  setup-branch-protection.md  triage-issues.md
src/mcp_gitlab/servers/: _helpers.py  gitlab.py  prompts.py  resources.py
tests/: conftest.py  test_links.py
tests/unit/: test_client.py  test_config.py  test_exceptions.py  test_prompts.py  test_resources.py  test_tools.py
