[project]
name = "mcp-gitlab"
version = "0.0.2"
description = "MCP server for GitLab API — projects, MRs, pipelines, CI/CD variables, approvals, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "vish288"}]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "gitlab",
    "gitlab-api",
    "gitlab-ci",
    "llm",
    "ai",
    "ai-agent",
    "claude",
    "merge-requests",
    "pipelines",
    "ci-cd",
    "devops",
    "code-review",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0,<3.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
]

[project.urls]
Homepage = "https://github.com/vish288/mcp-gitlab"
Repository = "https://github.com/vish288/mcp-gitlab"
Issues = "https://github.com/vish288/mcp-gitlab/issues"
Changelog = "https://github.com/vish288/mcp-gitlab/releases"

[project.scripts]
mcp-gitlab = "mcp_gitlab:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gitlab"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "S", "C4", "EM", "ISC"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
